--- a/05_Mineria_De_Datos/Tarea4/Tarea4.Rmd
+++ b/05_Mineria_De_Datos/Tarea4/Tarea4.Rmd
@@ -78,49 +78,55 @@ datos10m<- tablasPag[[1]]
 datos5m<- tablasPag[[2]]
 datos2m<- tablasPag[[3]]
 datos1m<- tablasPag[[4]]
+
+# Se procede a añadir una columna categoria, para unir los valores de las tablas en un solo dataset.
+datos10m['Categoria'] <- '10m'
+datos5m['Categoria'] <- '5m'
+datos2m['Categoria'] <- '2m'
+datos1m['Categoria'] <- '1m'
+
+#Se unen todos los dataframes en una sola.
+datos <- rbind(datos10m,datos5m,datos2m,datos1m)
 ```
 
 Una vez cargados los datos se preocede a hacer la exploración de los mismos. Como se puede apreciar, la mayoria de atributos al ser extraidos, son de tipo alfanumérico o caracter, en el caso del atributo "Year of inception" nos muestra que las fechas de creación de las franquicias van desde el año 1978 al año 2009.
 
 ```{r}
-summary(datos10m)
+summary(datos)
 ```
 ## Verificación de la calidad de datos
 
-Al explorar los datos es posible ver que no hay valores nulos o NAs. Con respecto a la normalización de los datos, se observan oportunidades de normalización de atributos como "Revenue breakdown"
+Al explorar los datos es posible ver que no hay valores nulos o NAs. Con respecto a la normalización de los datos, se observan oportunidades de normalización de atributos como "Revenue breakdown", por ejemplo la franquicia "Mario", tiene agrupados sus ingresos en 3 juegos "Super Mario", "Mario Cart" y "Otros Mario games", sin embargo en el caso de "Call of Duty" los ingresos están agrupados por rangos de años o año, ejemplo: "2003-2017", "2018" y "2019".
  
 #	Preparación de los datos 
 
+## Selección de los datos 
+
+Para efectos del trabajo se excluirá unicamente la columna Revenue Breakdown
+
+```{r}
+#Se remueve la columna Revenue Breakdown
+datos<-datos[,-4] 
+colnames(datos)
+
+#Se renombran las nombres de las columnas
+colnames(datos)<-c('Franquicia','Anno','Ingresos','Duenno','Plataforma','Genero', 'Categoria')
+datos
+```
+
+## Limpieza de los datos 
+
 ```{r warning=FALSE}
-revenue<- str_remove(datos1m$'Lifetime revenue','est\\.')
+revenue<- str_remove(datos10m$'Lifetime revenue','est\\.')
 revenue<- str_remove(revenue,'\\s*\\$')
 revenue<- str_remove(revenue,' billion.*$')
 ```
 
-```{r}
-datos10m['Categoria'] <- '10m'
-datos5m['Categoria'] <- '5m'
-datos2m['Categoria'] <- '2m'
-datos2m['Categoria'] <- '1m'
-```
-
-
-## Graficos de distribución de los valores de las variables que son factores:
-
-A fin de 
-
-## Selección de los datos 
-
-Para 
-
-
-## Limpieza de los datos 
-
-Para asegurar 
-
 ## Construcción de nuevos datos (atributos) 
 
-Se crearon 
+```{r warning=FALSE}
+
+```
 
 ## Transformaciones aplicadas a los datos 
  
