--- a/05_Mineria_De_Datos/Tarea4/Tarea4.Rmd
+++ b/05_Mineria_De_Datos/Tarea4/Tarea4.Rmd
@@ -354,4 +354,33 @@ kable(head(resultado_final_Anno,10),"html", booktabs = T)%>%  kable_styling(late
 * De la comparación de resultados de los métodos kmenoids y kmeans podemos observar que ambos algoritmos generan clusteres diferentes, en el caso de kmeans el cluster 2 nos permite ver como las compañías con mayores ingresos fueron agrupadas en su mayoria en el mismo cluster. Mientras que en el de kmedoids el año es el factor predominante en el agrupamiento.
 
 * También se observa consistencia en ambos métodos en donde tanto kmenoids y kmeans agrupó las franquicias con menores ingresos en el cluster 4.
+
+* Finalmente, comparamos los clusters asignados por ambos algoritmos con la clasificación realizada en la página de wikipedia, con las siguientes observaciones:
  
+```{r warning=FALSE}
+
+library(plyr)
+conteos_medoids <- ddply(resultado_final_Categoria, .(resultado_final_Categoria$Categoria, resultado_final_Categoria$clusteres_medoids), nrow)
+names(conteos_medoids) <- c("Categoria", "clusteres_medoids", "Conteo")
+kable(conteos_medoids,"html", booktabs = T,caption = "Conteos de pares de Categoría asignada de wikipedia y cluster asignado por kmedoids") %>%
+  kable_styling(bootstrap_options="striped")
+```
+
+Como podemos observar, para cada categoria de wikipedia, el algoritmo de k-medoids dsitribuyó las observaciones en los diferentes clusters de forma repartida, sin una clara tendencia.
+
+```{r warning=FALSE}
+conteos_kmeans <- ddply(resultado_final_Categoria, .(resultado_final_Categoria$Categoria, resultado_final_Categoria$clusteres_kmeans), nrow)
+names(conteos_kmeans) <- c("Categoria", "clusteres_kmeans", "Conteo")
+kable(conteos_kmeans,"html", booktabs = T,caption = "Conteos de pares de Categoría asignada de wikipedia y cluster asignado por kmeans") %>%
+  kable_styling(bootstrap_options="striped",)
+
+```
+
+A diferenciad e k-medoids, parece que k-means para cada categoria de wikipedia, el algoritmo  distribuyó las observaciones en los diferentes clusters pero en menor grado (opr ejemplo, todas las categorias excepto la 5m solo se distribuyen a 3 clusters en vez de 4) y en cada categoria existe un cluster predominante al que asigna las observaciones (excepto en el cluster 5):
+
+| Categoria | Cluster (k-means) | % Asignado al cluster |
+|-----------|-------------------|-----------------------|
+| 10m | 2 | 61.5% |
+| 1m | 3 | 51.7% |
+| 2m | 3 | 60.9% |
+| 5m | 1 | 33.3% |
